# bluewhale

./: .pre-commit-config.yaml  README.md  setup.cfg
src/bluewhale/: expression.py  operators.py
src/booleval/: expression.py  operators.py
tests/: test_basic.py
