[metadata]
name = bluewhale
description = Boolean expressions evaluator
license = MIT
url = https://github.com/quarckster/bluewhale
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
setup_requires =
    setuptools_scm>=3.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pre-commit
    pytest
    tox
